Validating token when creating transactions
